<resources>
    <string name="app_name">CoolingLoadCalc</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Cooling Load Calculator</string>
    <string name="second_fragment_label">Details</string>
    <string name="fragment_calculated_data_list_label">List of Calculated Data</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="m_square_text">m<sup><small>2</small></sup></string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="space_name_hint">Space name</string>

    <string name="space_area">Space Area (m<sup><small>2</small></sup>)</string>
    <string name="space_text">Space</string>

    <string name="space_width">Space Width (m)</string>
    <string name="space_length">Space Length (m)</string>

    <string name="space_purpose">Purpose of Space</string>

    <string name="roof_text">Roof</string>
    <string name="roof_area">Area (m<sup><small>2</small></sup>)</string>

    <string name="roof_width">Area (m<sup><small>2</small></sup>)</string>
    <string name="height_hint_text">Height (m)</string>
    <string name="width_hint_text">Width (m)</string>
    <string name="length_hint_text">Length (m)</string>
    <string name="number_of_window_text">Number of windows</string>

    <string name="wall_text">Walls</string>

    <string name="wall_text_a">Wall A</string>
    <string name="wall_area_a">Area (m<sup><small>2</small></sup>)</string>

    <string name="wall_text_b">Wall B</string>
    <string name="wall_area_b">Area (m<sup><small>2</small></sup>)</string>

    <string name="wall_text_c">Wall C</string>
    <string name="wall_area_c">Area (m<sup><small>2</small></sup>)</string>

    <string name="wall_text_d">Wall D</string>
    <string name="wall_area_d">Area (m<sup><small>2</small></sup>)</string>

    <string name="floor_text">Floor</string>
    <string name="floor_area">Area (m<sup><small>2</small></sup>)</string>

    <string name="window_text">Window</string>
    <string name="window_area">Area (m<sup><small>2</small></sup>)</string>

    <string name="door_text">Door</string>
    <string name="door_area">Area (m<sup><small>2</small></sup>)</string>

    <string name="ceiling_text">Ceiling</string>
    <string name="ceiling_area">Area (m<sup><small>2</small></sup>)</string>

    <string-array name="space_purposes">
        <item>None</item>
        <item>Auditorium</item>
        <item>Bar</item>
        <item>Bedroom</item>
        <item>Barber Shop</item>
        <item>Beauty salon</item>
        <item>Break room</item>
        <item>Classroom</item>
        <item>Computer lab</item>
        <item>Cafeteria</item>
        <item>Coffee station</item>
        <item>Corridor</item>
        <item>Courtroom</item>
        <item>Dining room</item>
        <item>Dance floor</item>
        <item>Equipment room</item>
        <item>Fast food</item>
        <item>Gym</item>
        <item>Gallery</item>
        <item>Kitchen</item>
        <item>Laundry room</item>
        <item>Living room</item>
        <item>Lecture hall</item>
        <item>Library</item>
        <item>Lobby</item>
        <item>Meeting room</item>
        <item>Museum</item>
        <item>Office space</item>
        <item>Pharmacy</item>
        <item>Photo studio</item>
        <item>Pet shop</item>
        <item>Restaurant</item>
        <item>Reception area</item>
        <item>Religious worship</item>
        <item>Science lab</item>
        <item>Storage room</item>
        <item>Supermarket</item>
        <item>Stage</item>
        <item>Swimming pool</item>
        <item>Warehouse</item>
    </string-array>

    <string-array name="roof_types">
        <item>Asbestos</item>
        <item>Aluminium</item>
        <item>Stone coated</item>
        <item>Fibre</item>
        <item>Pitched roof with felt</item>
        <item>Slate</item>
    </string-array>

    <string-array name="wall_types">
        <item>Hollow Block</item>
        <item>Bricks</item>
        <item>Clay file</item>
    </string-array>

    <string-array name="floor_types">
        <item>Concrete</item>
        <item>Decking</item>
        <item>Rug</item>
        <item>Terazzo</item>
        <item>Tile</item>
        <item>Wood</item>

    </string-array>

    <string-array name="window_types">
        <item>Wooding frame</item>
        <item>Metal frame</item>
    </string-array>

    <string-array name="ceiling_types">
        <item>Plaster (Pop)</item>
        <item>Ceiling tile</item>
        <item>Wooden panel</item>
        <item>Asbestos cement board</item>
    </string-array>

    <string name="add_equipment_text">Add Equipments:</string>
    <string name="add_floor_types_text">Add Type of Floors:</string>
    <string name="add_floor_types_button_text">Add Floor Types</string>
    <string name="ok">OK</string>
    <string name="cancel">"Cancel"</string>

    <string-array name="equipments">
        <item>Blender</item>
        <item>Coffee Maker</item>
        <item>Computer</item>
        <item>Electric cooker without oven</item>
        <item>Food Warmer</item>
        <item>Fryer</item>
        <item>Gas Cooker with oven</item>
        <item>Hair Dryer</item>
        <item>Hot Plate (Double Burner)</item>
        <item>Hot Plate (Single Burner)</item>
        <item>Lamp</item>
        <item>Microwave</item>
        <item>Printer</item>
        <item>Refrigerator (Small)</item>
        <item>Refrigerator (Large)</item>
        <item>Steam Cooker</item>
        <item>Steam Kettle</item>
        <item>Set-top Box</item>
        <item>Toaster</item>
        <item>TV</item>

    </string-array>


    <string name="wall_a">Wall A</string>
    <string name="wall_b">Wall B</string>
    <string name="wall_c">Wall C</string>
    <string name="wall_d">Wall D</string>

    <string name="wall_length_hint">Enter wall length</string>
    <string name="wall_width_hint">Enter wall width</string>

    <string name="enter_orientation">Orientation:</string>
    <string name="enter_state">State:</string>

    <string name="internal_wall_text">Internal</string>
    <string name="external_wall_text">External</string>

    <string-array name="orientations">
        <item>N</item>
        <item>NE</item>
        <item>NW</item>
        <item>E</item>
        <item>W</item>
        <item>SE</item>
        <item>SW</item>
        <item>S</item>
    </string-array>

    <string-array name="states">

        <item>Abuja</item>
        <item>Abia</item>
        <item>Adamawa</item>
        <item>Akwa Ibom</item>
        <item>Anambra</item>
        <item>Bauchi</item>
        <item>Bayelsa</item>
        <item>Benue</item>
        <item>Borno</item>
        <item>Cross River</item>
        <item>Delta</item>
        <item>Ebonyi</item>
        <item>Edo</item>
        <item>Ekiti</item>
        <item>Enugu</item>
        <item>Gombe</item>
        <item>Imo</item>
        <item>Jigawa</item>
        <item>Kaduna</item>
        <item>Kano</item>
        <item>Katsina</item>
        <item>Kebbi</item>
        <item>Kogi</item>
        <item>Kwara</item>
        <item>Lagos</item>
        <item>Nasarawa</item>
        <item>Niger</item>
        <item>Ogun</item>
        <item>Ondo</item>
        <item>Osun</item>
        <item>Oyo</item>
        <item>Plateau</item>
        <item>Rivers</item>
        <item>Sokoto</item>
        <item>Taraba</item>
        <item>Yobe</item>
        <item>Zamfara</item>
    </string-array>

    <string name="submit_button">Submit</string>

    <!--    Second screen - details of the calculation-->

    <string name="external_loads_text">External loads</string>
    <string name="internal_loads_text">Internal loads</string>
    <string name="Infiltration_and_ventilation_loads_text">Infiltration and Ventilation loads</string>


    <string name="number_of_people_text_card">Number of People</string>

    <string name="roof_type_text">Roof Type:</string>
    <string name="people_text">People</string>
    <string name="roof_load_text">Roof Load (KW):</string>
    <string name="wall_type_text">Wall Type:</string>
    <string name="wall_load_text">Wall Load (KW):</string>
    <string name="floor_type_text">Floor Type :</string>
    <string name="floor_load_text">Floor Load (KW):</string>
    <string name="door_orientation_text">Door Orientation:</string>
    <string name="door_load_text">Door Load (KW):</string>
    <string name="window_type_text">Window Type:</string>
    <string name="window_load_text">Window Load (KW):</string>
    <string name="people_load_text">People Load (KW):</string>
    <string name="ceiling_type_text">Ceiling Type:</string>
    <string name="ceiling_load_text">Ceiling Load (KW):</string>
    <string name="equipments_load_text">Equipments Load (KW):</string>
    <string name="list_of_equipments_text">List of Equipments</string>
    <string name="usage_type_text">Usage Type:</string>
    <string name="equipments_text">Equipments:</string>
    <string name="space_dimension_text">Space Area:</string>
    <string name="location_text">Location:</string>
    <string name="number_of_people_text">Number of People: </string>
    <string name="calculate_button_text">Calculate</string>
    <string name="get_button_text">Get</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="total_load_text">Total Load</string>
    <string name="load_in_kw_text">Load In kW</string>
    <string name="load_in_hp_text">Load In Hp</string>
    <string name="load_in_ton_text">Load In Ton</string>
    <string name="Load_in_btu_per_hr_text">Load In BTU/hr</string>


    <string name="save_text">Save</string>
    <string name="required_temperature_text">Required Temperature  <small><sup>o</sup></small>C</string>


</resources>